New format for 2024-25 school year

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "TechSmartAggregator": {
       "commandName": "Project",
-      "commandLineArgs": "\"CS201_Coding_in_Python_1_20-21_-1st_Period (2021-12-16).csv\""
+      "commandLineArgs": "\"CS201_Coding_in_Python_1-2nd_Period_(09-19).csv\""
     }
   }
 }
